--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,84 @@ section.sessao3{
   margin-left: 10px;
 }
 
+section.sessao4{
+  width: 100%;
+  background-color: #472563;
+  color: #fff;
+}
+
+section.sessao4 .container{
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+}
+
+section.sessao4 .form-contato,
+section.sessao4 .visita{
+  text-align: left;
+  margin-top: 40px;
+  width: 50%;
+  max-width: 380px;
+}
+
+.form-contato h2{
+  font-weight: lighter;
+  font-size: 28px;
+}
+
+.form-contato p{
+  padding: 15px 0;
+}
+
+.sessao4 .form-contato form input,
+.sessao4 .form-contato form textarea{
+  display: block;
+  width: 100%;
+  height: 40px;
+  outline: 0;
+  padding-left: 15px;
+  margin: 8px 0;
+  border: 0;
+  border-radius: 8px;
+}
+
+.sessao4 .form-contato form textarea{
+  resize: none;
+  height: 150px;
+  padding: 10px;
+}
+
+.sessao4 .form-contato form input[type=submit]{
+  width: 30%;
+  border: 0;
+  border-radius: 30px;
+  background-color: orangered;
+  cursor: pointer;
+}
+
+.sessao4 .visita h2{
+  font-weight: lighter;
+}
+
+.sessao4 .visita .maps-visita{
+  width: 100%;
+  margin-top: 30px;
+  height: 270px;
+  background-color: #fff;
+  border: 5px solid #ccc;
+}
+
+footer{
+  padding: 40px 0;
+  background-color: #191919;
+  color: #fff;
+}
+
+footer .container{
+  display: flex;
+  justify-content: space-between;
+}
+
 @media screen and (max-width: 425px){
   header a{
     color: #000;
@@ -372,6 +450,16 @@ section.sessao3{
   .sessao1 .image-mobile{
     display: none;
   }
+
+  footer .container{
+    display: block;
+    justify-content: none;
+    text-align: center;
+  }
+
+  footer p:not(:first-of-type){
+    margin-top: 20px;
+  }
 }
 
 @media screen and (max-width: 768px){
@@ -452,6 +540,35 @@ section.sessao3{
     margin: 10px auto;
     height: 20px;
 }
+}
+
+@media screen and (max-width: 820px){
+  section.sessao4{
+    height: 830px;
+  }
+
+  section.sessao4 .container{
+    display: block;
+    max-width: 1000px;
+  }
+
+  section.sessao4 .form-contato,
+  section.sessao4 .visita{
+    margin: 0 auto;
+    width: 100%;
+    max-width: 380px;
+  }
+
+  .sessao4 .form-contato form input[type=submit]{
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .form-contato h2,
+  section.sessao4 .visita h2{
+    text-align: center;
+    padding-top: 10px;
+  }
 }
 
 @media screen and (max-height: 470px){
